StayInformed: button white space fix

--- a/app/assets/stylesheets/layouts/_static.scss
+++ b/app/assets/stylesheets/layouts/_static.scss
@@ -113,6 +113,13 @@
     a {
       width: 100%;
       margin: 0 auto;
+      @media (max-width: $br-mobile-portrait - 1) {
+        height: auto;
+        line-height: 1;
+        padding: 10px 12px 8px;
+        white-space: normal;
+      }
+
       @media (min-width: $br-mobile-portrait) {
         width: auto;
         text-align: left;
